--- a/vignettes/sample-evaluation-partial.Rmd
+++ b/vignettes/sample-evaluation-partial.Rmd
@@ -36,9 +36,9 @@ against a critical upper limit, known as performance materiality.
 
 Partial misstatements occur when there is only a partial discrepancy between the
 true value of an item in the sample and its recorded value. From a data
-perspective, this implies that the misstatements in the sample are not binary
-(i.e., 0 or 1) but often lie between 0 and 1. In practice, this means that the
-usual methods for evaluating audit samples do not suffice.
+perspective, this implies that the misstatements in the sample are not just
+binary (i.e., 0 or 1) but also often lie between 0 and 1. In practice, this
+means that the usual methods for evaluating binary misstatements do not suffice.
 
 To illustrate how auditors can adequately deal with this type of misstatements,
 we examine a realistic sample from a financial audit using the `allowances` data
@@ -51,21 +51,20 @@ to ten percent.
 data("allowances")
 population <- allowances
 population <- population[population[["bookValue"]] > 0, ]
-population <- population[!is.na(population[["auditValue"]]), ]
-population <- population[population[["auditValue"]] > 0, c(1, 3, 4)]
+population <- population[!is.na(population[["auditValue"]]), c(1, 3, 4)]
 head(population)
 ```
 
 To decide whether the misstatement in the population is lower than the
-performance materiality of ten percent, a sample of 50 items is selected from
+performance materiality of ten percent, a sample of 60 items is selected from
 the population of 1177 items. In this case, the sample is selected using a fixed
 interval sampling method in which the items in the population are randomized
 before selection.
 
 ```{r}
-set.seed(1)
+set.seed(21)
 sample <- selection(
-  data = population, size = 50,
+  data = population, size = 60,
   method = "interval", units = "values", values = "bookValue",
   randomize = TRUE
 )$sample
@@ -83,21 +82,22 @@ has a taint of $t_i$ = 0.5. On the other hand, if the item does not contain any
 misstatement, it has a taint of $t_i$ = 0. Lastly, if the item is fully
 misstated (i.e., have a book value of $0), its taint is $t_i$ = 1.
 
-As is often the case in practice, this audit sample contains many taints that
-are zero, and only some taints that are greater than zero. The table below shows
-this distribution of taints.
+As is often the case in practice, this audit sample contains many items that are
+correct (34), some items that are fully misstated (4), and some items that are
+partially misstated (22). The table below shows the distribution of these
+misstatements.
 
 ```{r}
 sample[["difference"]] <- sample[["bookValue"]] - sample[["auditValue"]]
 sample[["taint"]] <- sample[["difference"]] / sample[["bookValue"]]
-table(round(sample[["taint"]], 3))
+table(round(sample[["taint"]], 2))
 ```
 
 Typically, techniques for evaluating audit samples overlook the prevalence of
 many zeros in the data. Yet, considering the abundance of zeros while modeling
 the misstatement in the population can enhance the auditor's efficiency. In the
-following sections, we demonstrate two approaches that can be used to deal with
-partial misstatements and show how they improve the auditor's efficiency.
+following sections, we demonstrate several approaches that can be used to deal
+with partial misstatements and show how they improve the auditor's efficiency.
 
 ## Classical approaches
 
@@ -125,7 +125,7 @@ therefore it is commonly applied in practice.
 
 For the classical binomial likelihood, aggregating the taints can be done using
 `method = "binomial"` in the `evaluation()` function. Using maximum likelihood
-estimation, $\theta$ = $\frac{\sum t}{n}$ = $\frac{4.2294}{50}$ = 0.084588.
+estimation, $\theta$ = $\frac{\sum t}{n}$ = $\frac{11.003}{60}$ = 0.18338.
 
 ```{r}
 eval_binom <- evaluation(
@@ -135,8 +135,8 @@ eval_binom <- evaluation(
 print(eval_binom)
 ```
 
-As shown in the output, the most likely misstatement is estimated to be 8.46
-percent, with a 95 percent upper bound of 17.96 percent. Note that this approach
+As shown in the output, the most likely misstatement is estimated to be 18.34
+percent, with a 95 percent upper bound of 28.52 percent. Note that this approach
 might be effective (i.e., estimate the misstatement well) but not not very
 efficient (i.e., has a relatively high upper bound). That is because it does not
 take into account the information in the distribution of the taints.
@@ -168,8 +168,8 @@ eval_stringer <- evaluation(
 print(eval_stringer)
 ```
 
-As shown in the output, the most likely misstatement is estimated to be 8.46
-percent, with a 95 percent upper bound of 17.23 percent. Since the upper bound
+As shown in the output, the most likely misstatement is estimated to be 18.34
+percent, with a 95 percent upper bound of 27.99 percent. Since the upper bound
 of the Stringer method is (slightly) lower than that of the binomial likelihood,
 the Stringer bound is more efficient.
 
@@ -193,30 +193,38 @@ appropriate name for this model is therefore a hurdle (i.e., two-component) beta
 model. This terminology reflects the idea that the model has to overcome the
 hurdle of zero values which are not inherently part of the beta likelihood.
 
-The formal specification of the hurdle beta model is given below. Here, $p$ is
-the probability of a non-zero taint occurring, $\phi$ is the average non-zero
-taint and $\nu$ is the concentration of the taints. The total misstatement in
-the population is determined as $\theta$ = $p \cdot \phi$.
+The formal specification of the hurdle beta model is given below. Here,
+$p_{\,(0,\,1]}$ is the probability of a misstatement occurring, regardless of its
+size. Additionally, $p_{\,1 \,|\, (0,\,1]}$ is the conditional probability of a
+misstatement being a full misstatement. Furthermore, $\phi$ is the average
+(non-zero-one) taint and $\nu$ is the concentration of these taints. The total
+misstatement in the population is $\theta$ = $p_{\,(0,\, 1)}$ $\cdot$ $\phi$ +
+$p_{\,1}$.
 
-$$
-t =
-\begin{cases}
-    0 & \text{with probability}\, 1 - p\\
-    \text{Beta}(\phi \nu,\, (1 - \phi) \nu) & \text{with probability}\, p
+\begin{align*}
+t = \begin{cases}
+    0 & \text{with probability } p_{\,0} = 1 - p_{\,(0,\,1]} \\
+    \left(0, 1\right] & \begin{cases}
+      \text{Beta}(\phi \nu, (1 - \phi) \nu) & \text{with probability } p_{\,(0,\,1)} = p_{\,(0,\,1]} \cdot (1 - p_{\,1 \,|\, (0,\,1]}) \\
+      1 & \text{with probability } p_{\,1} = p_{\,(0,\,1]} \cdot p_{\,1 \,|\, (0,\,1]}
+    \end{cases}
 \end{cases}
-$$
+\end{align*}
 
 In `jfa`, this hurdle beta model can be fitted using `method = "hurdle.beta"` in
 the `evaluation()` function. To estimate the parameters in this model using the
 maximum likelihood, we use the default option `prior = FALSE`. Using maximum 
-likelihood estimation, $p$ = $\frac{n_t}{n}$ = $\frac{12}{50}$ = 0.24, where
-$n_t$ is the number of non-zero taints. Furthermore, $\phi$ =
-$\frac{\sum t}{n_t}$ = $\frac{4.2294}{12}$ = 0.35245. Hence, the most likely
-misstatement is estimated to be $\theta$ = $p \cdot \phi$ = 0.24 $\cdot$ 0.35245
-= 0.084588. The upper bound cannot be derived analytically and has to be
-determined by drawing samples from the fitted model. Hence, it is recommended to
-call `set.seed()` before executing the following command to make the results
-reproducible.
+likelihood estimation, $p_{\,(0,\,1]}$ = $\frac{n_t}{n}$ = $\frac{26}{60}$ =
+0.433, where $n_t$ is the number of misstatements, and $p_{\,1 \,|\, (0,\,1]}$ =
+$\frac{n_1}{n_t}$ = $\frac{4}{26}$ = 0.1539, where $n_1$ is the number of full
+misstatements. Furthermore, $\phi$ = $\frac{\sum t - n_1}{n_t - n_1}$ =
+$\frac{11.003 - 4}{26 - 4}$ = 0.3183. Hence, the most likely misstatement is
+estimated to be $\theta$ = ($p_{\,(0,\,1]}$ $\cdot$ $(1-p_{\,1 \,|\, (0,\,1]})$
+$\cdot$ $\phi$) + ($p_{\,(0,\,1]}$ $\cdot$ $p_{\,1 \,|\, (0,\,1]}$) = (0.433
+$\cdot$ (1 - 0.1539) $\cdot$ 0.3183) + (0.433 $\cdot$ 0.1539) = 0.18338. The
+upper bound cannot be derived analytically and has to be determined by drawing
+samples from the fitted model. Hence, it is recommended to call `set.seed()`
+before executing the following command to make the results reproducible.
 
 ```{r}
 set.seed(1)
@@ -227,10 +235,10 @@ eval_hurdle <- evaluation(
 print(eval_hurdle)
 ```
 
-As shown in the output, the most likely misstatement is estimated to be around
-8.5 percent, with a 95 percent upper bound of around 14.44 percent. Since the
-upper bound of the hurdle beta model is lower than that of the Stringer bound,
-the hurdle beta model is more efficient.
+As shown in the output, the most likely misstatement is estimated to be 18.34
+percent, with a 95 percent upper bound of around 26.28 percent. Since the upper
+bound of the hurdle beta model is (slightly) lower than that of the Stringer
+bound, the hurdle beta model is more efficient.
 
 We leave it to the interested reader to apply the zero-inflated Poisson model to
 the data from this sample using `method = "inflated.poisson"`. Please note that
@@ -268,14 +276,13 @@ object created by the `auditPrior()` function.
 ```{r}
 eval_beta <- evaluation(
   method = "binomial", data = sample, materiality = 0.1,
-  values = "bookValue", values.audit = "auditValue",
-  prior = TRUE
+  values = "bookValue", values.audit = "auditValue", prior = TRUE
 )
 print(eval_beta)
 ```
 
-As shown in the output, the most likely misstatement is estimated to be 8.46
-percent, with a 95 percent upper bound of 17.63 percent. The prior and posterior
+As shown in the output, the most likely misstatement is estimated to be 18.34
+percent, with a 95 percent upper bound of 28.1 percent. The prior and posterior
 distribution can be visualized via the `plot(..., type = "posterior")` command.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
@@ -287,8 +294,9 @@ plot(eval_beta, type = "posterior")
 It is also possible to fit a Bayesian variant of the hurdle beta model. This
 entails applying prior distributions for the parameters $p$, $\phi$, and $\nu$.
 The prior distributions used by **jfa** for the Bayesian hurdle beta model are
-$p$ $\sim$ Beta($\alpha$, $\beta$) (to be specified by the user), $\phi$ $\sim$
-Beta(1, 1), and $\nu$ $\sim$ Pareto(1, $\frac{3}{2}$).
+$p_{\,(0,\,1]}$ $\sim$ Beta($\alpha$, $\beta$) (to be specified by the user),
+$p_{\,1 \,|\, (0,\,1]}$ $\sim$ Beta(1, 1), $\phi$ $\sim$ Beta(1, 1), and $\nu$
+$\sim$ Pareto(1, $\frac{3}{2}$).
 
 This Bayesian hurdle beta model can be applied using `method = "hurdle.beta"` in
 combination with `prior = TRUE` (or an object created by the `auditPrior()`
@@ -298,17 +306,16 @@ sampling, which is why it is recommended to call `set.seed()` before computing
 the results.
 
 ```{r}
-set.seed(1)
+set.seed(2)
 eval_hurdle_bayes <- evaluation(
   method = "hurdle.beta", data = sample, materiality = 0.1,
-  values = "bookValue", values.audit = "auditValue",
-  prior = TRUE
+  values = "bookValue", values.audit = "auditValue", prior = TRUE
 )
 print(eval_hurdle_bayes)
 ```
 
-As shown in the output, the most likely misstatement is estimated to be around
-8 percent, with a 95 percent upper bound of around 14 percent. The prior and
+As shown in the output, the most likely misstatement is estimated to be 19.35
+percent, with a 95 percent upper bound of around 26.4 percent. The prior and
 posterior distribution can be visualized using the `plot()` function.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
