--- a/vignettes/audit-sampling.Rmd
+++ b/vignettes/audit-sampling.Rmd
@@ -166,9 +166,9 @@ benchmarks:
 
 The cheat sheet below will help you get started with **jfa**'s' intended audit
 sampling workflow. You can download a `pdf` version of the cheat sheet
-[here](https://github.com/koenderks/jfa/raw/development/man/figures/cheatsheet/cheatsheet.pdf).
+[here](https://github.com/koenderks/jfa/raw/development/man/figures/cheatsheet/cheatsheet-sampling.pdf).
 
-<p align='center'><img src='cheatsheet.png' alt='cheatsheet' width='1000'></p>
+<p align='center'><img src='cheatsheet-sampling.png' alt='cheatsheet-sampling' width='1000'></p>
 
 ## References
 <div id="refs"></div>
