--- a/vignettes/sample-evaluation.Rmd
+++ b/vignettes/sample-evaluation.Rmd
@@ -210,7 +210,7 @@ summary(result_np)
 ```
 
 In this case, the output of the `summary()` function shows that the estimate of
-the misstatement in the population is 5.85 percent, with the 95 percent credible
+the misstatement in the population is 5.98 percent, with the 95 percent credible
 interval ranging from 4.28 percent to 8.22 percent. The stratum estimates differ
 substantially from each other but are relatively uncertain.
 
@@ -283,8 +283,8 @@ summary(result_pp)
 ```
 
 In this case, the output shows that the estimate of the misstatement in the
-population is 4.28 percent, with the 95 percent credible interval ranging from
-3.26 percent to 5.33 percent. Note that this population estimate is
+population is 4.16 percent, with the 95 percent credible interval ranging from
+3.30 percent to 5.29 percent. Note that this population estimate is
 substantially less uncertain than that of the no pooling approach. Note that,
 like in the no pooling approach, the stratum estimates are different from each
 other but lie closer together and are less uncertain.
@@ -384,8 +384,8 @@ summary(x)
 
 In this case, the output shows that the estimate of the misstatement in the
 population is 14.72 percent, with the 95 percent confidence interval ranging
-from 12.55 percent to 18.26 percent. The precision of the population estimate is
-3.54 percent. The stratum estimates can be seen in the output of the `summary()`
+from 12.55 percent to 18.28 percent. The precision of the population estimate is
+3.56 percent. The stratum estimates can be seen in the output of the `summary()`
 function and are visualized below.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
@@ -411,11 +411,10 @@ summary(x)
 ```
 
 The output shows that the estimate of the misstatement in the population is
-15.66 percent, with the 95 percent credible interval ranging from 14.59 percent
-to 17 percent. The precision of the population estimate is 1.34 percent, which
-is substantially lower than that of the classical approach. The stratum
-estimates can be seen in the output of the `summary()` function and are
-visualized below.
+15.64 percent, with the 95 percent credible interval ranging from 13.48 percent
+to 18.1 percent. The precision of the population estimate is 2.46 percent, which
+is lower than that of the classical approach. The stratum estimates can be seen
+in the output of the `summary()` function and are visualized below.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
 plot(x, type = "estimates")
