--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -376,3 +376,13 @@
   note = {R package version 1.4},
   url = {https://CRAN.R-project.org/package=BeyondBenford},
 }
+@article{rouder_2014,
+  title={Optional stopping: No problem for {B}ayesians},
+  author={Rouder, Jeffrey N},
+  journal={Psychonomic bulletin \& review},
+  volume={21},
+  pages={301--308},
+  year={2014},
+  publisher={Springer},
+  doi={10.3758/s13423-014-0595-4}
+}
